fix alignment of linkedin icon

--- a/css/main.scss
+++ b/css/main.scss
@@ -89,4 +89,5 @@ li p:only-child {
 i.icon {
   color: #828282;
   font-size: 16px;
+  width: 16px;
 }
